--- a/app/src/main/res/layout/activity_request_details.xml
+++ b/app/src/main/res/layout/activity_request_details.xml
@@ -1,207 +1,219 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     tools:context=".requests.request_details.RequestDetailsActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/white"
-        android:orientation="vertical"
-        android:padding="15dp">
-
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center_vertical"
-            android:orientation="horizontal">
+            android:background="@color/white"
+            android:orientation="vertical"
+            android:padding="15dp">
 
-            <ImageView
-                android:id="@+id/back"
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/back"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:contentDescription="@string/description"
+                    android:src="@drawable/ic_back"
+                    app:tint="@color/black" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="5dp"
+                    android:text="@string/request_details"
+                    android:textColor="@color/black"
+                    android:textSize="24sp"
+                    android:textStyle="bold" />
+
+            </LinearLayout>
+
+            <com.shuhart.stepview.StepView
+                android:id="@+id/step_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="16dp"
+                android:visibility="gone"
+                app:sv_animationType="All"
+                app:sv_doneCircleColor="@color/green"
+                app:sv_doneCircleRadius="20dp"
+                app:sv_doneStepLineColor="@color/green"
+                app:sv_doneStepMarkColor="@color/white"
+                app:sv_doneTextColor="@color/black"
+                app:sv_nextStepCircleColor="@color/stepper_gray"
+                app:sv_nextStepCircleEnabled="true"
+                app:sv_nextStepLineColor="@color/light_gray"
+                app:sv_nextTextColor="@color/light_gray"
+                app:sv_selectedCircleColor="@color/light_gray"
+                app:sv_selectedCircleRadius="20dp"
+                app:sv_selectedStepNumberColor="@color/black"
+                app:sv_selectedTextColor="@color/light_gray"
+                app:sv_stepNumberTextSize="20sp"
+                app:sv_stepPadding="4dp"
+                app:sv_steps="@array/request_steps" />
+
+            <params.com.stepview.StatusViewScroller
+                android:id="@+id/status_view"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:contentDescription="@string/description"
-                android:src="@drawable/ic_back"
-                app:tint="@color/black" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="5dp"
-                android:text="@string/request_details"
-                android:textColor="@color/black"
-                android:textSize="24sp"
-                android:textStyle="bold" />
+                android:layout_gravity="center"
+                android:layout_marginTop="10dp"
+                android:entries="@array/request_steps"
+                app:alignStatusWithCurrent="true"
+                app:circleColor="@color/green"
+                app:circleColorCurrent="@color/stepper_gray"
+                app:circleColorIncomplete="@color/stepper_gray"
+                app:circleColorType="fillStroke"
+                app:circleStrokeColor="@color/green"
+                app:circleStrokeColorCurrent="@color/green"
+                app:circleStrokeColorIncomplete="@color/stepper_gray"
+                app:circleStrokeWidth="2dp"
+                app:completeDrawable="@drawable/ic_done"
+                app:currentCount="2"
+                app:currentStepZoom="0.2"
+                app:drawLabels="true"
+                app:lineColor="@color/light_gray"
+                app:lineColorCurrent="@color/green"
+                app:lineColorIncomplete="@color/light_gray"
+                app:lineGap="5dp"
+                app:lineLength="80dp"
+                app:lineWidth="0.7dp"
+                app:stepCount="3"
+                app:strictObeyLineLength="true"
+                app:textColorLabelsCurrent="@color/black"
+                app:textColorLabelsIncomplete="@color/light_gray"
+                app:textSizeLabels="18sp" />
 
         </LinearLayout>
 
-        <com.shuhart.stepview.StepView
-            android:id="@+id/step_view"
+        <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="16dp"
-            android:visibility="gone"
-            app:sv_animationType="All"
-            app:sv_doneCircleColor="@color/green"
-            app:sv_doneCircleRadius="20dp"
-            app:sv_doneStepLineColor="@color/green"
-            app:sv_doneStepMarkColor="@color/white"
-            app:sv_doneTextColor="@color/black"
-            app:sv_nextStepCircleColor="@color/stepper_gray"
-            app:sv_nextStepCircleEnabled="true"
-            app:sv_nextStepLineColor="@color/light_gray"
-            app:sv_nextTextColor="@color/light_gray"
-            app:sv_selectedCircleColor="@color/light_gray"
-            app:sv_selectedCircleRadius="20dp"
-            app:sv_selectedStepNumberColor="@color/black"
-            app:sv_selectedTextColor="@color/light_gray"
-            app:sv_stepNumberTextSize="20sp"
-            app:sv_stepPadding="4dp"
-            app:sv_steps="@array/request_steps" />
+            android:layout_height="match_parent"
+            android:background="@color/request_details_bg">
 
-        <params.com.stepview.StatusViewScroller
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="10dp"
-            android:entries="@array/request_steps"
-            app:circleColor="@color/green"
-            app:circleColorCurrent="@color/stepper_gray"
-            app:circleColorIncomplete="@color/stepper_gray"
-            app:circleColorType="fillStroke"
-            app:circleStrokeColor="@color/green"
-            app:circleStrokeColorCurrent="@color/green"
-            app:circleStrokeColorIncomplete="@color/stepper_gray"
-            app:circleStrokeWidth="2dp"
-            app:completeDrawable="@drawable/ic_done"
-            app:currentCount="2"
-            app:drawLabels="true"
-            app:lineColor="@color/light_gray"
-            app:lineColorCurrent="@color/green"
-            app:lineColorIncomplete="@color/light_gray"
-            app:lineGap="5dp"
-            app:lineLength="80dp"
-            app:lineWidth="0.7dp"
-            app:stepCount="3"
-            app:textColorLabelsCurrent="@color/black"
-            app:textColorLabelsIncomplete="@color/light_gray"
-            app:textSizeLabels="18sp"
-            app:currentStepZoom="0.2"
-            app:alignStatusWithCurrent="true"
-            app:strictObeyLineLength= "true"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:paddingStart="20dp"
+                android:paddingTop="20dp"
+                android:paddingEnd="20dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/white_curved"
+                    android:orientation="vertical"
+                    android:paddingStart="15dp"
+                    android:paddingTop="5dp"
+                    android:paddingEnd="10dp"
+                    android:paddingBottom="5dp">
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerVertical="true"
+                            android:text="@string/request_details"
+                            android:textColor="@color/black"
+                            android:textSize="20sp" />
+
+
+                        <ImageView
+                            android:id="@+id/expand_details"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentEnd="true"
+                            android:layout_centerVertical="true"
+                            android:contentDescription="@string/description"
+                            android:padding="5dp"
+                            android:src="@drawable/ic_arrow_down" />
+                    </RelativeLayout>
+
+                    <FrameLayout
+                        android:id="@+id/request_details_content"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:visibility="gone" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="10dp"
+                    android:background="@drawable/white_curved"
+                    android:orientation="vertical"
+                    android:paddingStart="15dp"
+                    android:paddingTop="5dp"
+                    android:paddingEnd="10dp"
+                    android:paddingBottom="5dp">
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerVertical="true"
+                            android:text="@string/request_cost"
+                            android:textColor="@color/black"
+                            android:textSize="20sp" />
+
+
+                        <ImageView
+                            android:id="@+id/expand_cost"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentEnd="true"
+                            android:layout_centerVertical="true"
+                            android:contentDescription="@string/description"
+                            android:padding="5dp"
+                            android:src="@drawable/ic_arrow_down" />
+                    </RelativeLayout>
+
+
+                    <FrameLayout
+                        android:id="@+id/request_cost_content"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:visibility="gone" />
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+        </androidx.core.widget.NestedScrollView>
 
     </LinearLayout>
 
-    <androidx.core.widget.NestedScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/request_details_bg">
+    <ProgressBar
+        android:id="@+id/loading"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:layout_gravity="center" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:paddingStart="20dp"
-            android:paddingTop="20dp"
-            android:paddingEnd="20dp">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@drawable/white_curved"
-                android:orientation="vertical"
-                android:paddingStart="15dp"
-                android:paddingTop="5dp"
-                android:paddingEnd="10dp"
-                android:paddingBottom="5dp">
-
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerVertical="true"
-                        android:text="@string/request_details"
-                        android:textColor="@color/black"
-                        android:textSize="20sp" />
-
-
-                    <ImageView
-                        android:id="@+id/expand_details"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentEnd="true"
-                        android:layout_centerVertical="true"
-                        android:padding="5dp"
-                        android:contentDescription="@string/description"
-                        android:src="@drawable/ic_arrow_down" />
-                </RelativeLayout>
-
-                <FrameLayout
-                    android:id="@+id/request_details_content"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:visibility="gone"/>
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="10dp"
-                android:background="@drawable/white_curved"
-                android:orientation="vertical"
-                android:paddingStart="15dp"
-                android:paddingTop="5dp"
-                android:paddingEnd="10dp"
-                android:paddingBottom="5dp">
-
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/request_cost"
-                        android:textColor="@color/black"
-                        android:layout_centerVertical="true"
-                        android:textSize="20sp" />
-
-
-                    <ImageView
-                        android:id="@+id/expand_cost"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentEnd="true"
-                        android:layout_centerVertical="true"
-                        android:contentDescription="@string/description"
-                        android:src="@drawable/ic_arrow_down"
-                        android:padding="5dp" />
-                </RelativeLayout>
-
-
-
-                <FrameLayout
-                    android:id="@+id/request_cost_content"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:visibility="gone"/>
-
-            </LinearLayout>
-
-        </LinearLayout>
-
-    </androidx.core.widget.NestedScrollView>
-
-
-</LinearLayout>
+</RelativeLayout>
