--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -12,12 +12,13 @@
     tools:context=".login.LoginActivity">
 
     <ImageView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
+        android:layout_marginEnd="80dp"
         android:adjustViewBounds="true"
         android:contentDescription="@string/img_description"
-        android:src="@drawable/ic_cat_print" />
+        android:src="@drawable/catalyst" />
 
     <TextView
         android:layout_width="match_parent"
@@ -25,22 +26,21 @@
         android:layout_marginTop="20dp"
         android:text="@string/welcome_back"
         android:textColor="@color/black"
-        android:textSize="30sp"
-        android:textStyle="bold" />
+        android:textSize="26sp"
+        android:textStyle="bold"/>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:text="@string/please_login_to_your_account"
-        android:textSize="19sp" />
-
+        android:textSize="16sp" />
 
     <com.google.android.material.textfield.TextInputLayout
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp">
+        android:layout_marginTop="10dp">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/email"
