--- a/app/src/main/res/layout/activity_add_project.xml
+++ b/app/src/main/res/layout/activity_add_project.xml
@@ -59,14 +59,16 @@
                     android:textColor="@color/gray"
                     android:textSize="16sp" />
 
-
-                <Spinner
+                <TextView
                     android:id="@+id/client_company"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
-                    android:hint="@string/client_company"
-                    android:theme="@style/spinnerItemStyle_black"/>
+                    android:text="@string/select_company"
+                    android:textSize="16sp"
+                    android:padding="5dp"
+                    android:textColor="@color/black"
+                    app:drawableEndCompat="@drawable/ic_arrow_down" />
 
             </LinearLayout>
 
