--- a/app/src/main/res/layout/bottom_sheet_companies.xml
+++ b/app/src/main/res/layout/bottom_sheet_companies.xml
@@ -23,14 +23,65 @@
             android:src="@drawable/ic_close"
             app:tint="@color/black" />
 
-        <TextView
+        <RelativeLayout
+            android:id="@+id/add_company_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="start"
-            android:text="@string/select_company"
-            android:textColor="@color/black"
-            android:textSize="20sp"
-            android:textStyle="bold" />
+            android:visibility="gone">
+
+            <EditText
+                android:id="@+id/company_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="5dp"
+                android:layout_toStartOf="@id/add_company"
+                android:background="@drawable/et_gray"
+                android:drawableTint="@color/black"
+                android:hint="@string/company_name"
+                android:importantForAutofill="no"
+                android:inputType="text"
+                android:padding="8dp" />
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/add_company"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:padding="0dp"
+                android:text="@string/add"
+                android:textAllCaps="false" />
+
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:layout_toStartOf="@id/add_new_company"
+                android:gravity="start"
+                android:text="@string/select_company"
+                android:textColor="@color/black"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/add_new_company"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:padding="0dp"
+                android:text="@string/add"
+                android:textAllCaps="false" />
+
+
+        </RelativeLayout>
 
 
         <EditText
@@ -43,6 +94,7 @@
             android:drawableTint="@color/black"
             android:hint="@string/type_to_search"
             android:imeOptions="actionSearch"
+            android:importantForAutofill="no"
             android:inputType="text"
             android:padding="8dp" />
 
