--- a/app/src/main/res/layout/fragment_photography_supplier_cost_view.xml
+++ b/app/src/main/res/layout/fragment_photography_supplier_cost_view.xml
@@ -170,6 +170,29 @@
             </LinearLayout>
 
             <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/attach_file"
+                    android:textColor="@color/light_gray"
+                    android:textSize="16sp" />
+
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/attaches_recycler"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:orientation="horizontal"/>
+
+
+            </LinearLayout>
+
+            <LinearLayout
                 android:id="@+id/nagat_approval_container"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
