--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -99,4 +99,17 @@
         android:text="@string/change_password"
         android:textColor="@color/black" />
 
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btn_log_out"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_marginHorizontal="10dp"
+        android:background="@drawable/et_gray"
+        android:baselineAligned="false"
+        android:textAllCaps="false"
+        android:text="@string/log_out"
+        android:textColor="@color/black" />
+
 </LinearLayout>
